SERVER-6993 - fix findAndModify positional operator regression with undotted query fields